--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "chromedriver": "^97.0.2",
+    "dotenv": "^14.3.2",
     "geckodriver": "^3.0.1",
+    "moment": "^2.29.1",
+    "mongodb": "^4.3.1",
     "selenium-webdriver": "^4.1.1"
   }
 }
